# polyreasoner

./: .env.example  .gitignore  README.md  WORKFLOW.md  agents.py  config.py  dynamic_persona.py  implementation.md  judge_prompts.py  main.py  polyreasoner.py  prompts.py  pyproject.toml  requirements.txt  router_agent.py  run_tests.py  webapp.py
backend/: __init__.py  api_backend.py  base.py  expert_ensemble.py  ollama_backend.py  specialist_moe.py
cli/: context_reader.py  display.py  parser.py
config/: ensembles.yaml
experiments/paper4_polyreasoner_validation/aeos_orchestration/: aggregate_paper3.py  aggregate_single_text.py  aggregate_single_vision.py  build_paper3_assets.py  reviewer.py  run_ablations.ps1  run_all.ps1  run_all_vision_overnight.ps1  run_exp3_dual_gpt.ps1  run_exp3_dual_vision.ps1  run_exp3_gpt.ps1  run_exp3_local14b_text.ps1  run_math_ablation.py  runner_critic.py  trainer.py
experiments/paper4_polyreasoner_validation/frontier_benchmark_30/: README.md  run_benchmark.bat
models/: readme.md
modes/: business_mode.py  career_mode.py  decision_mode.py  evaluate_mode.py  judge_mode.py  manual_mode.py  reasoning_mode.py
output/: json_writer.py
poly-reasoner-v3/: .gitignore  PROMPTSHIELD_INTEGRATION.md  README.md  config.py  implementation.md  main.py  test_specialist_moe.py
poly-reasoner-v3/backend/: __init__.py  expert_ensemble.py  ollama_backend.py  specialist_moe.py
poly-reasoner-v3/experiments/: DIVERSITY_VS_DEPTH.md  README.md
poly-reasoner-v3/prompts/: judge_prompts.py
tools/: web_search.py
(+59 files in other folders)
