[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyreasoner"
version = "4.0.0"
description = "A multi-perspective reasoning and decision-making system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "ollama>=0.4.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "jsonschema>=4.0.0",
    "pyyaml",
    "ddgs"
]

[project.scripts]
poly = "main:cli_entry"
